--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,8 @@
         "eslint-config-blueflag",
         "eslint-config-blueflag/react",
         "eslint-config-blueflag/flow"
-    ]
+    ],
+    "rules": {
+        "newline-per-chained-call": "off"
+    }
 }
