--- a/.flowconfig
+++ b/.flowconfig
@@ -2,6 +2,7 @@
 module.system.node.resolve_dirname=node_modules
 module.system.node.resolve_dirname=..
 module.system.node.resolve_dirname=src
+unsafe.enable_getters_and_setters=true
 
 [ignore]
 <PROJECT_ROOT>/src/unmutable/client.js
