--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   ],
   "name": "unmutable",
   "version": "0.2.0",
-  "description": "Immutable.js functions for collections that may or may not be Immutable",
+  "description": "Immutable.js functions for collections that may or may not be Immutable.",
   "license": "MIT",
   "author": "Damien Clarke",
   "repository": {
@@ -17,7 +17,7 @@
   },
   "private": false,
   "scripts": {
-    "build": "rm -rf lib && babel src --out-dir lib",
+    "build": "rm -rf lib && node ./scripts/flow.js && babel src --out-dir lib",
     "build-examples": "cd example && yarn install && yarn run build && cd -",
     "deploy-to-gh-pages": "yarn run build && yarn run build-examples && yarn run docs && node scripts/publish.js",
     "prepublish": "yarn run build",
@@ -29,7 +29,8 @@
     "lint": "eslint src --ext js,jsx",
     "lint-fix": "eslint src --ext js,jsx --fix",
     "test": "NODE_ENV=test nyc --report-dir=./coverage ava && yarn run check-coverage",
-    "test-all": "NODE_ENV=test yarn run lint && yarn run flow && yarn run test"
+    "test-all": "NODE_ENV=test yarn run lint && yarn run flow && yarn run test",
+    "view-coverage": "yarn run check-coverage; open ./coverage/lcov-report/index.html"
   },
   "devDependencies": {
     "app-module-path": "^2.2.0",
@@ -41,20 +42,18 @@
     "babel-register": "^6.23.0",
     "dotenv": "4.0.0",
     "eslint": "^3.9.1",
-    "eslint-config-blueflag": "^0.4.0",
+    "eslint-config-blueflag": "^0.5.0",
+    "flow-bin": "^0.39.0",
+    "fs-extra": "^4.0.1",
     "gh-pages": "^0.11.0",
     "git-url-parse": "^6.0.1",
-    "immutable": "^3.8.1",
     "jsdoc": "^3.4.3",
     "jsdoc-babel": "^0.3.0",
-    "jsdoc-react-proptypes": "^1.0.1",
-    "jsdonk": "0.4.18",
+    "jsdoc-react-proptypes": "^1.0.2",
+    "jsdonk": "^0.7.0",
     "nyc": "^10.0.0",
     "proxyquire": "^1.7.10",
     "sinon": "^2.1.0"
-  },
-  "peerDependencies": {
-    "immutable": "^3.8.1"
   },
   "ava": {
     "require": [
