--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,6 @@
 {
   "lerna": "2.1.2",
-  "packages": [
-    "packages/*"
-  ],
-  "version": "0.0.0"
+  "version": "0.6.0",
+  "npmClient": "yarn",
+  "useWorkspaces": true
 }
