--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "lerna run build",
-    "prepublish": "lerna run prepublish",
+    "prepublish": "cd packages/unmutable-core && yarn link && cd ../.. && yarn link unmutable-core && lerna run prepublish",
     "watch": "lerna run --parallel watch",
     "ava": "NODE_ENV=test ava",
     "check-coverage": "NODE_ENV=test nyc check-coverage --branches 100.0  --functions 100.0 --lines 100.0",
