--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "scripts": {
     "build": "lerna run build",
-    "prepublish": "cd packages/unmutable-core && yarn link && cd ../.. && yarn link unmutable-core && lerna run prepublish",
+    "postinstall": "lerna bootstrap",
+    "prepublish": "lerna run prepublish",
     "watch": "lerna run --parallel watch",
     "ava": "NODE_ENV=test ava",
     "check-coverage": "NODE_ENV=test nyc check-coverage --branches 100.0  --functions 100.0 --lines 100.0",
@@ -34,8 +35,7 @@
     "lerna": "^2.1.2",
     "nyc": "^10.0.0",
     "proxyquire": "^1.7.10",
-    "sinon": "^2.1.0",
-    "is-plain-object": "^2.0.4"
+    "sinon": "^2.1.0"
   },
   "ava": {
     "require": [
@@ -81,8 +81,5 @@
     "require": [
       "babel-register"
     ]
-  },
-  "workspaces": [
-    "packages/*"
-  ]
+  }
 }
