--- a/packages/unmutable-lite/package.json
+++ b/packages/unmutable-lite/package.json
@@ -22,7 +22,7 @@
     "watch": "yarn run build -- -w"
   },
   "dependencies": {
-    "unmutable-core": "v0.7.0"
+    "unmutable-core": "^0.7.0"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
