--- a/packages/unmutable/package.json
+++ b/packages/unmutable/package.json
@@ -22,7 +22,7 @@
     "watch": "yarn run build -- -w"
   },
   "dependencies": {
-    "unmutable-core": "v0.7.0"
+    "unmutable-core": "^0.7.0"
   },
   "peerDependencies": {
     "immutable": "^3.8.1"
