--- a/packages/unmutable-core/package.json
+++ b/packages/unmutable-core/package.json
@@ -14,7 +14,7 @@
   "bugs": {
     "url": "https://github.com/blueflag/unmutable/issues"
   },
-  "private": true,
+  "private": false,
   "scripts": {
     "build": "rm -rf lib && babel src --out-dir lib",
     "prepublish": "yarn run build",
