--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,7 @@
     "presets": [
         ["blueflag", {"browser": true, "library": true}]
     ],
-    "ignore": ["./lib"],
+    "ignore": ["./pa"],
     "env": {
         "test": {
             "plugins": [
