--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "main": "lib/index.js",
+  "main": "pa/index.js",
   "files": [
-    "lib"
+    "pa"
   ],
   "name": "unmutable",
   "version": "0.6.0",
@@ -17,7 +17,7 @@
   },
   "private": false,
   "scripts": {
-    "build": "rm -rf lib && node ./scripts/flow.js && babel src --out-dir lib",
+    "build": "rm -rf pa && node ./scripts/flow.js && babel src --out-dir pa",
     "build-examples": "cd example && yarn install && yarn run build && cd -",
     "deploy-to-gh-pages": "yarn run build && yarn run build-examples && yarn run docs && node scripts/publish.js",
     "prepublish": "yarn run build",
@@ -43,17 +43,21 @@
     "dotenv": "4.0.0",
     "eslint": "^3.9.1",
     "eslint-config-blueflag": "^0.5.0",
-    "flow-bin": "^0.39.0",
+    "eslint-plugin-flowtype": "^2.41.0",
+    "flow-bin": "^0.54.0",
     "fs-extra": "^4.0.1",
     "gh-pages": "^0.11.0",
     "git-url-parse": "^6.0.1",
-    "jsdoc": "^3.4.3",
-    "jsdoc-babel": "^0.3.0",
-    "jsdoc-react-proptypes": "^1.0.2",
-    "jsdonk": "^0.7.0",
+    "immutable": "4.0.0-rc.9",
     "nyc": "^10.0.0",
     "proxyquire": "^1.7.10",
     "sinon": "^2.1.0"
+  },
+  "dependencies": {
+    "is-plain-object": "^2.0.4"
+  },
+  "peerDependencies": {
+    "immutable": "4.0.0-rc.9"
   },
   "ava": {
     "require": [
@@ -70,7 +74,8 @@
       "sourceMaps": "inline"
     },
     "files": [
-      "src/**/*-test.js"
+      "src/**/*-test.js",
+      "src/**/*-testutil.js"
     ]
   },
   "nyc": {
@@ -95,11 +100,5 @@
     "require": [
       "babel-register"
     ]
-  },
-  "dependencies": {
-    "is-plain-object": "^2.0.4"
-  },
-  "peerDependencies": {
-    "immutable": "^3.8.1"
   }
 }
