--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,9 @@
     "presets": [
         ["blueflag", {"browser": true, "library": true}]
     ],
-    "ignore": ["lib/*"],
+    "ignore": [
+        "lib/*"
+    ],
     "env": {
         "test": {
             "plugins": [
