--- a/package.json
+++ b/package.json
@@ -18,86 +18,29 @@
   "private": false,
   "scripts": {
     "build": "rm -rf lib && node ./scripts/flow.js && babel src --out-dir lib --ignore **/__test__/*-test.js,**/__test__/*-testutil.js",
-    "build-examples": "cd example && yarn install && yarn run build && cd -",
-    "deploy-to-gh-pages": "yarn run build && yarn run build-examples && yarn run docs && node scripts/publish.js",
     "prepublish": "yarn run build",
     "watch": "yarn run build -- -w",
-    "ava": "NODE_ENV=test ava",
     "check-coverage": "NODE_ENV=test nyc check-coverage --branches 100.0  --functions 100.0 --lines 100.0",
-    "docs": "jsdoc -c jsdoc.json",
-    "flow": "flow check",
-    "lint": "eslint src --ext js,jsx",
-    "lint-fix": "eslint src --ext js,jsx --fix",
-    "test": "NODE_ENV=test nyc --report-dir=./coverage ava && yarn run check-coverage",
-    "test-all": "NODE_ENV=test yarn run lint && yarn run test && yarn run flow",
-    "view-coverage": "yarn run check-coverage; open ./coverage/lcov-report/index.html"
+    "flow": "blueflag-test flow",
+    "lint": "blueflag-test lint",
+    "test": "blueflag-test test",
+    "coverage": "blueflag-test coverage --min-coverage=100",
+    "test-all": "yarn lint && yarn coverage",
+    "view-coverage": "yarn run coverage; open ./coverage/lcov-report/index.html"
   },
   "devDependencies": {
-    "app-module-path": "^2.2.0",
-    "ava": "^0.25.0",
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.0",
-    "babel-plugin-istanbul": "4.1.1",
     "babel-preset-blueflag": "^0.3.0",
     "babel-register": "^6.23.0",
-    "dotenv": "4.0.0",
-    "eslint": "^3.9.1",
-    "eslint-config-blueflag": "^0.5.0",
-    "eslint-plugin-flowtype": "^2.41.0",
-    "flow-bin": "^0.54.0",
+    "blueflag-test": "^0.18.1",
     "fs-extra": "^4.0.1",
-    "gh-pages": "^0.11.0",
-    "git-url-parse": "^6.0.1",
     "immutable": "4.0.0-rc.9",
     "immutable3": "npm:immutable@^3.8.1",
-    "nyc": "^10.0.0",
-    "proxyquire": "^1.7.10",
     "sinon": "^2.1.0"
   },
   "dependencies": {
     "fast-deep-equal": "^1.0.0",
     "is-plain-object": "^2.0.4"
-  },
-  "ava": {
-    "require": [
-      "./pretest",
-      "babel-register"
-    ],
-    "babel": {
-      "presets": [
-        "blueflag"
-      ],
-      "plugins": [
-        "istanbul"
-      ],
-      "sourceMaps": "inline"
-    },
-    "files": [
-      "src/**/*-test.js"
-    ]
-  },
-  "nyc": {
-    "all": true,
-    "sourceMap": false,
-    "instrument": false,
-    "include": [
-      "src/**"
-    ],
-    "exclude": [
-      "src/**/*-test.js",
-      "src/**/*-testutil.js",
-      "dist"
-    ],
-    "reporter": [
-      "lcov",
-      "text"
-    ],
-    "extension": [
-      ".js",
-      ".jsx"
-    ],
-    "require": [
-      "babel-register"
-    ]
   }
 }
