--- a/.flowconfig
+++ b/.flowconfig
@@ -1,8 +1,11 @@
+[libs]
+./node_modules/blueflag-test/flow-typed-shims/immutable-3.8.x/
+./node_modules/blueflag-test/flow-typed-shims/jest-enzyme-6.0.x/
+
 [options]
 module.system.node.resolve_dirname=node_modules
 module.system.node.resolve_dirname=..
 module.system.node.resolve_dirname=src
-unsafe.enable_getters_and_setters=true
 
 [ignore]
 <PROJECT_ROOT>/coverage/.*
