--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "lib/index.js",
+  "main": "index.js",
   "files": [
     "lib"
   ],
@@ -43,5 +43,6 @@
     "fast-deep-equal": "^1.0.0",
     "is-plain-object": "^2.0.4",
     "lodash.range": "^3.2.0"
-  }
+  },
+  "sideEffects": false
 }
