feat: add rough docs app layout

--- a/.flowconfig
+++ b/.flowconfig
@@ -13,3 +13,4 @@ module.system.node.resolve_dirname=src
 <PROJECT_ROOT>/scripts/.*
 <PROJECT_ROOT>/dist/.*
 <PROJECT_ROOT>/node_modules/immutable/.*
+<PROJECT_ROOT>/docs/.*
