--- a/docs/package.json
+++ b/docs/package.json
@@ -4,25 +4,23 @@
   "version": "0.0.0",
   "author": "Damien Clarke",
   "dependencies": {
-    "bruce": "v4",
+    "bruce": "4.0.0",
     "dcme-style": "^0.17.0",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.15",
-    "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.1",
-    "gatsby-plugin-sharp": "^2.0.7",
     "gatsby-source-filesystem": "^2.0.4",
-    "gatsby-transformer-sharp": "^2.1.4",
     "mdx-loader": "^1.0.0-beta.3",
     "mdxc": "1.1.1",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-spruce": "^0.1.0"
   },
   "keywords": [
-    "gatsby"
+    "unmutable"
   ],
   "license": "MIT",
   "scripts": {
