--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "build": "rm -rf lib && node ./scripts/flow.js && babel src --out-dir lib --ignore **/__test__/*-test.js,**/__test__/*-testutil.js",
     "build-docs": "cd docs && yarn gatsby build",
-    "prepublish": "yarn run build cd docs && yarn",
+    "prepublish": "yarn run build && cd docs && yarn",
     "watch": "yarn run build -- -w",
     "check-coverage": "NODE_ENV=test nyc check-coverage --branches 100.0  --functions 100.0 --lines 100.0",
     "flow": "blueflag-test flow",
@@ -34,7 +34,7 @@
   "devDependencies": {
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.0",
-    "babel-preset-blueflag": "^0.3.0",
+    "babel-preset-blueflag": "^0.6.0",
     "babel-register": "^6.23.0",
     "blueflag-test": "0.20.0",
     "fs-extra": "^4.0.1",
