refactor: upgrade babel

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "rm -rf lib && node ./scripts/flow.js && babel src --out-dir lib --ignore **/__test__/*-test.js,**/__test__/*-testutil.js",
     "build-docs": "cd docs && yarn gatsby build",
     "prepublish": "yarn run build && cd docs && yarn",
-    "watch": "yarn run build -- -w",
+    "watch": "yarn run build -w && watch-docs",
     "check-coverage": "NODE_ENV=test nyc check-coverage --branches 100.0  --functions 100.0 --lines 100.0",
     "flow": "blueflag-test flow",
     "flow-coverage": "blueflag-test flow-coverage -M",
@@ -28,14 +28,12 @@
     "test": "yarn jest",
     "test-all": "yarn lint && yarn flow && yarn test",
     "view-coverage": "open ./coverage/lcov-report/index.html",
-    "watch": "yarn run build -w && watch-docs",
     "watch-docs": "cd docs && yarn watch"
   },
   "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.23.0",
-    "babel-preset-blueflag": "^0.6.0",
-    "babel-register": "^6.23.0",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "babel-preset-blueflag": "^1.0.0",
     "blueflag-test": "0.20.0",
     "fs-extra": "^4.0.1",
     "immutable": "4.0.0-rc.9",
