docs: get gatsby working

--- a/docs/.babelrc
+++ b/docs/.babelrc
@@ -2,6 +2,9 @@
     "presets": [
         ["blueflag", {"browser": true, "library": true}]
     ],
+    "plugins": [
+        "@babel/plugin-syntax-dynamic-import"
+    ],
     "ignore": [
         "lib/*"
     ]
