--- a/docs/package.json
+++ b/docs/package.json
@@ -5,15 +5,16 @@
   "author": "Damien Clarke",
   "dependencies": {
     "bruce": "4.0.0",
-    "dcme-style": "^0.18.0",
+    "dcme-style": "^0.18.1",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.15",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sass": "^2.0.1",
+    "gatsby-plugin-sass": "^2.0.0-rc.2",
     "gatsby-source-filesystem": "^2.0.4",
     "mdx-loader": "^1.0.0-beta.3",
     "mdxc": "1.1.1",
+    "node-sass": "^4.9.4",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
