--- a/docs/package.json
+++ b/docs/package.json
@@ -15,6 +15,7 @@
     "mdx-loader": "^1.0.0-beta.3",
     "mdxc": "1.1.1",
     "node-sass": "^4.9.4",
+    "prismjs": "^1.11.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
