--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
     "babel-preset-blueflag": "^1.0.0",
-    "blueflag-test": "0.20.0",
+    "blueflag-test": "^0.22.0",
     "fs-extra": "^4.0.1",
     "immutable": "4.0.0-rc.9",
     "immutable3": "npm:immutable@^3.8.1",
