--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
   },
   "private": false,
   "scripts": {
-    "build": "rm -rf lib && node ./scripts/flow.js && babel src --out-dir lib --ignore **/__test__/*-test.js,**/__test__/*-testutil.js",
+    "build": "rm -rf lib && node ./scripts/flow.js && babel src --out-dir lib --ignore **/__test__/*-test.js,**/__test__/*-testutil.js && yarn make-gitignore",
     "build-docs": "cd docs && yarn gatsby build",
+    "create-top-level-files": "node scripts/create-top-level-files.js",
+    "delete-top-level-files": "node scripts/delete-top-level-files.js",
     "postinstall": "cd docs && yarn",
-    "prepublishOnly": "yarn run build && cd docs && yarn",
+    "prepublishOnly": "yarn run build && yarn create-top-level-files",
+    "postpublish": "yarn delete-top-level-files",
     "watch": "yarn run build -w && watch-docs",
     "check-coverage": "NODE_ENV=test nyc check-coverage --branches 100.0  --functions 100.0 --lines 100.0",
     "flow": "blueflag-test flow",
     "flow-coverage": "blueflag-test flow-coverage -M",
     "lint": "blueflag-test lint",
-    "test": "yarn jest --maxWorkers=4",
+    "make-gitignore": "node scripts/make-gitignore.js",
+    "test": "(yarn create-top-level-files && yarn jest --maxWorkers=4 && yarn delete-top-level-files) || (yarn delete-top-level-files && exit 1)",
     "test-all": "yarn lint && yarn flow && yarn test",
     "view-coverage": "open ./coverage/lcov-report/index.html",
     "watch-docs": "cd docs && yarn watch"
