--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
     "extends": [
         "eslint-config-blueflag",
         "eslint-config-blueflag/react",
-        "eslint-config-blueflag/flow"
+        "eslint-config-blueflag/flow",
+        "eslint-config-blueflag/jest"
     ],
     "rules": {
         "newline-per-chained-call": "off"
