--- a/package.json
+++ b/package.json
@@ -176,9 +176,13 @@
   "devDependencies": {
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
+    "@commitlint/cli": "^7.2.1",
+    "@commitlint/config-conventional": "^7.1.2",
     "babel-preset-blueflag": "^1.0.0",
     "blueflag-test": "^0.22.0",
+    "cz-conventional-changelog": "2.1.0",
     "fs-extra": "^4.0.1",
+    "husky": "^1.3.0",
     "immutable": "4.0.0-rc.9",
     "immutable3": "npm:immutable@^3.8.1",
     "sinon": "^2.1.0"
@@ -189,5 +193,15 @@
     "is-plain-object": "^2.0.4",
     "lodash.range": "^3.2.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
