refactor: go back to older better mdx lib

--- a/docs/package.json
+++ b/docs/package.json
@@ -4,19 +4,16 @@
   "version": "0.0.0",
   "author": "Damien Clarke",
   "dependencies": {
-    "@mapbox/rehype-prism": "^0.3.0",
-    "@mdx-js/loader": "^0.16.6",
-    "@mdx-js/mdx": "^0.16.6",
-    "@mdx-js/tag": "^0.16.6",
     "bruce": "4.0.0",
     "dcme-style": "^0.22.1",
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.15",
-    "gatsby-mdx": "^0.3.3",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.0-rc.2",
     "gatsby-source-filesystem": "^2.0.4",
+    "mdx-loader": "^1.0.0-beta.3",
+    "mdxc": "1.1.1",
     "node-sass": "^4.9.4",
     "prismjs": "^1.11.0",
     "react": "^16.5.1",
