--- a/.flowconfig
+++ b/.flowconfig
@@ -6,6 +6,7 @@
 module.system.node.resolve_dirname=node_modules
 module.system.node.resolve_dirname=..
 module.system.node.resolve_dirname=src
+server.max_workers=1
 
 [ignore]
 <PROJECT_ROOT>/coverage/.*
