--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "deleteAll.js",
     "deleteIn.js",
     "doIf.js",
+    "endsWith.js",
     "entries.js",
     "entriesReverse.js",
     "entryArray.js",
@@ -116,6 +117,7 @@
     "sort.js",
     "sortBy.js",
     "splice.js",
+    "startsWith.js",
     "strictEquals.js",
     "swap.js",
     "take.js",
