--- a/package.json
+++ b/package.json
@@ -1,200 +1,11 @@
 {
-  "main": "index.js",
-  "files": [
-    "lib",
-    "butLast.js",
-    "chunk.js",
-    "chunkBy.js",
-    "clear.js",
-    "clone.js",
-    "compose.js",
-    "composeWith.js",
-    "concat.js",
-    "count.js",
-    "deal.js",
-    "defaults.js",
-    "delete.js",
-    "deleteAll.js",
-    "deleteIn.js",
-    "doIf.js",
-    "endsWith.js",
-    "entries.js",
-    "entriesReverse.js",
-    "entryArray.js",
-    "equals.js",
-    "every.js",
-    "filter.js",
-    "filterNot.js",
-    "find.js",
-    "findEntry.js",
-    "findIndex.js",
-    "findKey.js",
-    "findLast.js",
-    "findLastEntry.js",
-    "findLastIndex.js",
-    "findLastKey.js",
-    "first.js",
-    "flatMap.js",
-    "flatten.js",
-    "forEach.js",
-    "get.js",
-    "getIn.js",
-    "groupBy.js",
-    "has.js",
-    "hasIn.js",
-    "hashCode.js",
-    "identity.js",
-    "includes.js",
-    "indexOf.js",
-    "insert.js",
-    "interpose.js",
-    "isAssociative.js",
-    "isCollection.js",
-    "isEmpty.js",
-    "isImmutable.js",
-    "isIndexed.js",
-    "isKeyed.js",
-    "isNotEmpty.js",
-    "isObject.js",
-    "isOrdered.js",
-    "isPlainObject.js",
-    "isRecord.js",
-    "isValueObject.js",
-    "isWriteable.js",
-    "join.js",
-    "keyArray.js",
-    "keyBy.js",
-    "keyOf.js",
-    "keys.js",
-    "last.js",
-    "lastIndexOf.js",
-    "lastKeyOf.js",
-    "log.js",
-    "map.js",
-    "max.js",
-    "maxBy.js",
-    "merge.js",
-    "mergeDeep.js",
-    "mergeDeepIn.js",
-    "mergeDeepWith.js",
-    "mergeIn.js",
-    "mergeWith.js",
-    "method.js",
-    "min.js",
-    "minBy.js",
-    "move.js",
-    "notEquals.js",
-    "omit.js",
-    "overload.js",
-    "pick.js",
-    "pipe.js",
-    "pipeIf.js",
-    "pipeWith.js",
-    "pivot.js",
-    "pop.js",
-    "push.js",
-    "range.js",
-    "reduce.js",
-    "reduceRight.js",
-    "remove.js",
-    "rename.js",
-    "rest.js",
-    "reverse.js",
-    "rotate.js",
-    "set.js",
-    "setIn.js",
-    "setSize.js",
-    "shallowEquals.js",
-    "shallowToJS.js",
-    "shift.js",
-    "size.js",
-    "skip.js",
-    "skipLast.js",
-    "skipUntil.js",
-    "skipWhile.js",
-    "slice.js",
-    "some.js",
-    "sort.js",
-    "sortBy.js",
-    "splice.js",
-    "startsWith.js",
-    "strictEquals.js",
-    "swap.js",
-    "take.js",
-    "takeLast.js",
-    "takeUntil.js",
-    "takeWhile.js",
-    "toArray.js",
-    "toIndexed.js",
-    "toJS.js",
-    "toJSON.js",
-    "toKeyed.js",
-    "toObject.js",
-    "unique.js",
-    "uniqueBy.js",
-    "unit.js",
-    "unshift.js",
-    "update.js",
-    "updateIn.js",
-    "updateInto.js",
-    "valueArray.js",
-    "values.js",
-    "zip.js",
-    "zipAll.js",
-    "zipWith.js"
-  ],
-  "name": "unmutable",
-  "version": "0.43.0",
-  "description": "Immutable.js functions for collections that may or may not be Immutable.",
-  "license": "MIT",
-  "author": "Damien Clarke",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:blueflag/unmutable.git"
-  },
-  "bugs": {
-    "url": "https://github.com/blueflag/unmutable/issues"
-  },
-  "private": false,
+  "private": true,
   "scripts": {
-    "install-docs": "cd docs && yarn",
-    "build": "rm -rf lib && babel src --out-dir lib --ignore '**/__test__/*.js' && yarn make-gitignore",
-    "build-docs": "cd docs && yarn gatsby build",
-    "create-top-level-files": "node scripts/create-top-level-files.js && node scripts/update-publishable-files-list.js",
-    "delete-top-level-files": "node scripts/delete-top-level-files.js",
-    "prepublishOnly": "yarn run build && yarn create-top-level-files",
-    "postpublish": "yarn delete-top-level-files",
-    "watch": "yarn run build -w && watch-docs",
-    "check-coverage": "NODE_ENV=test nyc check-coverage --branches 100.0  --functions 100.0 --lines 100.0",
-    "flow": "blueflag-test flow",
-    "flow-coverage": "blueflag-test flow-coverage -M",
-    "lint": "blueflag-test lint",
-    "make-gitignore": "node scripts/make-gitignore.js",
-    "test": "(yarn create-top-level-files && yarn jest --maxWorkers=1 && yarn delete-top-level-files) || (yarn delete-top-level-files && exit 1)",
-    "test-all": "yarn lint && yarn flow && yarn test",
-    "view-coverage": "open ./coverage/lcov-report/index.html",
-    "watch-docs": "cd docs && yarn watch"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.2",
-    "babel-preset-blueflag": "^1.0.0",
-    "blueflag-test": "^0.22.0",
-    "immutable": "4.0.0-rc.9",
-    "immutable3": "npm:immutable@^3.8.1",
-    "@commitlint/cli": "^7.2.1",
-    "husky": "^1.1.2"
+    "test-all": "lerna run test-all --concurrency 2",
+    "build": "lerna run build",
+    "bootstrap": "lerna bootstrap"
   },
   "dependencies": {
-    "@babel/runtime": "^7.1.5",
-    "fast-deep-equal": "^1.0.0",
-    "is-plain-object": "^2.0.4",
-    "lodash.range": "^3.2.0"
-  },
-  "sideEffects": false,
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
+    "lerna": "^3.10.7"
   }
 }
