docs: fix link in docs and docs builds

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "test-all": "lerna run test-all --concurrency 2",
-    "build": "lerna run build",
+    "build": "cp README.md packages/unmutable/README.md && lerna run build",
     "bootstrap": "lerna bootstrap"
   },
   "dependencies": {
