--- a/packages/unmutable/package.json
+++ b/packages/unmutable/package.json
@@ -144,7 +144,7 @@
     "zipWith.js"
   ],
   "name": "unmutable",
-  "version": "0.43.0",
+  "version": "0.43.1",
   "description": "Immutable.js functions for collections that may or may not be Immutable.",
   "license": "MIT",
   "author": "Damien Clarke",
@@ -178,12 +178,12 @@
   "devDependencies": {
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
+    "@commitlint/cli": "^7.2.1",
     "babel-preset-blueflag": "^1.0.0",
     "blueflag-test": "^0.22.0",
+    "husky": "^1.1.2",
     "immutable": "4.0.0-rc.9",
-    "immutable3": "npm:immutable@^3.8.1",
-    "@commitlint/cli": "^7.2.1",
-    "husky": "^1.1.2"
+    "immutable3": "npm:immutable@^3.8.1"
   },
   "dependencies": {
     "@babel/runtime": "^7.1.5",
