--- a/packages/unmutable/package.json
+++ b/packages/unmutable/package.json
@@ -22,6 +22,7 @@
     "entriesReverse.js",
     "entryArray.js",
     "equals.js",
+    "equalsType.js",
     "every.js",
     "filter.js",
     "filterNot.js",
