--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "test-all": "yarn lerna run test-all --concurrency 2",
     "build": "cp README.md packages/unmutable/README.md && yarn lerna run build",
-    "bootstrap": "yarn lerna bootstrap"
+    "bootstrap": "yarn lerna bootstrap",
+    "bump": "yarn lerna publish -m \"build: publish\""
   },
   "dependencies": {
     "lerna": "^3.10.7"
