--- a/packages/unmutable-docs/package.json
+++ b/packages/unmutable-docs/package.json
@@ -6,38 +6,21 @@
   "author": "Damien Clarke",
   "dependencies": {
     "browser-util-inspect": "^0.2.0",
-    "bruce": "4.0.0",
-    "dcme-style": "^0.22.1",
+    "dcme-gatsby": "^0.5.0",
+    "dcme-style": "^0.27.3",
     "gatsby": "^2.0.19",
-    "gatsby-image": "^2.0.15",
-    "gatsby-plugin-offline": "^2.0.5",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sass": "^2.0.0-rc.2",
-    "gatsby-source-filesystem": "^2.0.4",
-    "mdx-loader": "^1.0.0-beta.3",
-    "mdxc": "1.1.1",
-    "node-sass": "^4.9.4",
-    "prismjs": "^1.11.0",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0",
-    "react-markdown": "^4.0.6",
-    "react-runkit": "^0.9.0",
-    "react-spruce": "^0.1.0"
+    "unmutable": "^0.45.1"
   },
   "keywords": [
     "unmutable"
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "build-docs": "gatsby build",
     "watch": "gatsby develop"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/blueflag/unmutable"
-  },
-  "devDependencies": {
-    "babel-preset-blueflag": "^1.0.0"
   }
 }
