--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "test-all": "yarn lerna run test-all --concurrency 2",
     "build": "cp README.md packages/unmutable/README.md && yarn lerna run build",
     "bootstrap": "yarn lerna bootstrap",
-    "bump": "yarn lerna publish -m \"build: publish\""
+    "bump": "yarn lerna publish -m \"build: publish\"",
+    "prep": "yarn && yarn bootstrap",
+    "reinstall": "rm -rf node_modules && rm -rf packages/*/node_modules && yarn prep"
   },
   "dependencies": {
     "lerna": "^3.10.7"
