break: move to named exports using rollup

--- a/packages/unmutable/package.json
+++ b/packages/unmutable/package.json
@@ -1,154 +1,12 @@
 {
-  "main": "index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "files": [
-    "lib",
-    "butLast.js",
-    "chunk.js",
-    "chunkBy.js",
-    "clear.js",
-    "clone.js",
-    "compose.js",
-    "composeWith.js",
-    "concat.js",
-    "count.js",
-    "deal.js",
-    "defaults.js",
-    "delete.js",
-    "deleteAll.js",
-    "deleteIn.js",
-    "doIf.js",
-    "endsWith.js",
-    "entries.js",
-    "entriesReverse.js",
-    "entryArray.js",
-    "equals.js",
-    "equalsType.js",
-    "every.js",
-    "filter.js",
-    "filterNot.js",
-    "find.js",
-    "findEntry.js",
-    "findIndex.js",
-    "findKey.js",
-    "findLast.js",
-    "findLastEntry.js",
-    "findLastIndex.js",
-    "findLastKey.js",
-    "first.js",
-    "flatMap.js",
-    "flatten.js",
-    "forEach.js",
-    "get.js",
-    "getIn.js",
-    "groupBy.js",
-    "has.js",
-    "hasIn.js",
-    "hashCode.js",
-    "identity.js",
-    "includes.js",
-    "indexOf.js",
-    "insert.js",
-    "interpose.js",
-    "isAssociative.js",
-    "isCollection.js",
-    "isEmpty.js",
-    "isImmutable.js",
-    "isIndexed.js",
-    "isKeyed.js",
-    "isNotEmpty.js",
-    "isObject.js",
-    "isOrdered.js",
-    "isPlainObject.js",
-    "isRecord.js",
-    "isValueObject.js",
-    "isWriteable.js",
-    "join.js",
-    "keyArray.js",
-    "keyBy.js",
-    "keyOf.js",
-    "keys.js",
-    "last.js",
-    "lastIndexOf.js",
-    "lastKeyOf.js",
-    "log.js",
-    "map.js",
-    "max.js",
-    "maxBy.js",
-    "merge.js",
-    "mergeDeep.js",
-    "mergeDeepIn.js",
-    "mergeDeepWith.js",
-    "mergeIn.js",
-    "mergeWith.js",
-    "method.js",
-    "min.js",
-    "minBy.js",
-    "move.js",
-    "notEquals.js",
-    "omit.js",
-    "overload.js",
-    "pick.js",
-    "pipe.js",
-    "pipeIf.js",
-    "pipeWith.js",
-    "pivot.js",
-    "pop.js",
-    "push.js",
-    "range.js",
-    "reduce.js",
-    "reduceRight.js",
-    "remove.js",
-    "rename.js",
-    "replaceEqual.js",
-    "replaceEqualDeep.js",
-    "rest.js",
-    "reverse.js",
-    "rotate.js",
-    "set.js",
-    "setIn.js",
-    "setSize.js",
-    "shallowEquals.js",
-    "shallowToJS.js",
-    "shift.js",
-    "size.js",
-    "skip.js",
-    "skipLast.js",
-    "skipUntil.js",
-    "skipWhile.js",
-    "slice.js",
-    "some.js",
-    "sort.js",
-    "sortBy.js",
-    "splice.js",
-    "startsWith.js",
-    "strictEquals.js",
-    "swap.js",
-    "take.js",
-    "takeLast.js",
-    "takeUntil.js",
-    "takeWhile.js",
-    "toArray.js",
-    "toIndexed.js",
-    "toJS.js",
-    "toJSON.js",
-    "toKeyed.js",
-    "toObject.js",
-    "unique.js",
-    "uniqueBy.js",
-    "unit.js",
-    "unshift.js",
-    "update.js",
-    "updateIn.js",
-    "updateInto.js",
-    "valueArray.js",
-    "values.js",
-    "zip.js",
-    "zipAll.js",
-    "zipWith.js"
+    "dist"
   ],
   "name": "unmutable",
   "version": "0.45.1",
-  "description": "Immutable.js functions for collections that may or may not be Immutable.",
+  "description": "An immutable, point-free, functional data collection library for plain old Javascript.",
   "license": "MIT",
   "author": "Damien Clarke",
   "repository": {
@@ -160,9 +18,7 @@
   },
   "private": false,
   "scripts": {
-    "build": "rm -rf lib && babel src --out-dir lib --ignore '**/__test__/*.js' && yarn make-gitignore",
-    "create-top-level-files": "node scripts/create-top-level-files.js && node scripts/update-publishable-files-list.js",
-    "delete-top-level-files": "node scripts/delete-top-level-files.js",
+    "build": "rm -rf dist && yarn make-index && yarn rollup --config",
     "prepublishOnly": "yarn run build && yarn create-top-level-files",
     "postpublish": "yarn delete-top-level-files",
     "watch": "yarn run build -w && watch-docs",
@@ -170,9 +26,9 @@
     "flow": "blueflag-test flow",
     "flow-coverage": "blueflag-test flow-coverage -M",
     "lint": "blueflag-test lint",
-    "make-gitignore": "node scripts/make-gitignore.js",
-    "test": "(yarn create-top-level-files && yarn jest --maxWorkers=1 && yarn delete-top-level-files) || (yarn delete-top-level-files && exit 1)",
-    "test-all": "yarn lint && yarn flow && yarn test",
+    "make-index": "node scripts/make-index.js",
+    "test": "yarn jest --maxWorkers=1",
+    "test-all": "yarn lint && yarn flow && yarn test && yarn size-limit",
     "view-coverage": "open ./coverage/lcov-report/index.html"
   },
   "devDependencies": {
@@ -183,15 +39,19 @@
     "blueflag-test": "^0.22.0",
     "husky": "^1.1.2",
     "immutable": "4.0.0-rc.9",
-    "immutable3": "npm:immutable@^3.8.1"
+    "immutable3": "npm:immutable@^3.8.1",
+    "rollup": "^1.17.0",
+    "rollup-plugin-analyzer": "^3.1.2",
+    "rollup-plugin-terser": "^5.1.1",
+    "size-limit": "1.0.x"
   },
   "dependencies": {
     "@babel/runtime": "^7.1.5",
     "fast-deep-equal": "^1.0.0",
     "is-plain-object": "^2.0.4",
-    "lodash.range": "^3.2.0"
+    "lodash.range": "^3.2.0",
+    "rollup-plugin-babel": "^4.3.3"
   },
-  "sideEffects": false,
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
