--- a/packages/unmutable-docs/package.json
+++ b/packages/unmutable-docs/package.json
@@ -23,7 +23,8 @@
     "react-helmet": "^5.2.0",
     "react-markdown": "^4.0.6",
     "react-runkit": "^0.9.0",
-    "react-spruce": "^0.1.0"
+    "react-spruce": "^0.1.0",
+    "unmutable": "^0.45.1"
   },
   "keywords": [
     "unmutable"
