--- a/packages/unmutable-docs/package.json
+++ b/packages/unmutable-docs/package.json
@@ -2,7 +2,7 @@
   "name": "unmutable-docs",
   "private": true,
   "description": "Unmutable docs",
-  "version": "0.0.2",
+  "version": "1.0.0-alpha.0",
   "author": "Damien Clarke",
   "dependencies": {
     "browser-util-inspect": "^0.2.0",
@@ -24,7 +24,7 @@
     "react-markdown": "^4.0.6",
     "react-runkit": "^0.9.0",
     "react-spruce": "^0.1.0",
-    "unmutable": "^0.45.1"
+    "unmutable": "^1.0.0-alpha.0"
   },
   "keywords": [
     "unmutable"
