--- a/packages/unmutable/package.json
+++ b/packages/unmutable/package.json
@@ -5,7 +5,7 @@
     "dist"
   ],
   "name": "unmutable",
-  "version": "0.45.1",
+  "version": "1.0.0-alpha.0",
   "description": "An immutable, point-free, functional data collection library for plain old Javascript.",
   "license": "MIT",
   "author": "Damien Clarke",
