--- a/packages/unmutable/package.json
+++ b/packages/unmutable/package.json
@@ -20,7 +20,6 @@
   "scripts": {
     "build": "rm -rf dist && yarn make-index && yarn rollup --config",
     "prepublishOnly": "yarn run build",
-    "postpublish": "yarn delete-top-level-files",
     "watch": "yarn run build -w && watch-docs",
     "check-coverage": "NODE_ENV=test nyc check-coverage --branches 100.0  --functions 100.0 --lines 100.0",
     "flow": "blueflag-test flow",
@@ -56,5 +55,6 @@
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
-  }
+  },
+  "gitHead": "d31656c6b0f29a11da531bf372c7ab5b148fe948"
 }
