--- a/packages/unmutable/package.json
+++ b/packages/unmutable/package.json
@@ -41,6 +41,7 @@
     "immutable3": "npm:immutable@^3.8.1",
     "rollup": "^1.17.0",
     "rollup-plugin-analyzer": "^3.1.2",
+    "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-terser": "^5.1.1",
     "size-limit": "1.0.x"
   },
@@ -48,8 +49,7 @@
     "@babel/runtime": "^7.1.5",
     "fast-deep-equal": "^1.0.0",
     "is-plain-object": "^2.0.4",
-    "lodash.range": "^3.2.0",
-    "rollup-plugin-babel": "^4.3.3"
+    "lodash.range": "^3.2.0"
   },
   "husky": {
     "hooks": {
