--- a/packages/unmutable/package.json
+++ b/packages/unmutable/package.json
@@ -56,5 +56,5 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
-  "gitHead": "d31656c6b0f29a11da531bf372c7ab5b148fe948"
+  "sideEffects": false
 }
