--- a/packages/unmutable/package.json
+++ b/packages/unmutable/package.json
@@ -16,6 +16,7 @@
     "delete.js",
     "deleteAll.js",
     "deleteIn.js",
+    "deleteMutate.js",
     "doIf.js",
     "endsWith.js",
     "entries.js",
@@ -37,6 +38,7 @@
     "first.js",
     "flatMap.js",
     "flatten.js",
+    "flip.js",
     "forEach.js",
     "get.js",
     "getIn.js",
@@ -48,6 +50,7 @@
     "includes.js",
     "indexOf.js",
     "insert.js",
+    "interleave.js",
     "interpose.js",
     "isAssociative.js",
     "isCollection.js",
@@ -72,6 +75,8 @@
     "lastKeyOf.js",
     "log.js",
     "map.js",
+    "mapEntries.js",
+    "mapKeys.js",
     "max.js",
     "maxBy.js",
     "merge.js",
@@ -106,6 +111,7 @@
     "rotate.js",
     "set.js",
     "setIn.js",
+    "setMutate.js",
     "setSize.js",
     "shallowEquals.js",
     "shallowToJS.js",
