--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "test-all": "yarn lerna run test-all --concurrency 2",
     "build": "cp README.md packages/unmutable/README.md && yarn lerna run build",
     "bootstrap": "yarn lerna bootstrap",
+    "prep": "yarn && yarn lerna bootstrap",
     "bump": "yarn lerna publish -m \"build: publish\""
   },
   "dependencies": {
