--- a/packages/unmutable/package.json
+++ b/packages/unmutable/package.json
@@ -126,6 +126,7 @@
     "sort.js",
     "sortBy.js",
     "splice.js",
+    "stableSortBy.js",
     "startsWith.js",
     "strictEquals.js",
     "swap.js",
@@ -134,6 +135,7 @@
     "takeUntil.js",
     "takeWhile.js",
     "toArray.js",
+    "toEntries.js",
     "toIndexed.js",
     "toJS.js",
     "toJSON.js",
