--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "scripts": {
     "test-all": "yarn lerna run test-all --concurrency 2",
-    "build": "cp README.md packages/unmutable/README.md && yarn lerna run build",
+    "build": "yarn lerna run build",
+    "build-docs": "cp README.md packages/unmutable/README.md && yarn lerna run build-docs",
     "bootstrap": "yarn lerna bootstrap",
     "prep": "yarn && yarn lerna bootstrap",
     "bump": "yarn lerna publish -m \"build: publish\"",
